--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -87,7 +87,7 @@ linters:
 
   NestingDepth:
     enabled: true
-    max_depth: 5
+    max_depth: 6
 
   PlaceholderInExtend:
     enabled: false
@@ -100,7 +100,11 @@ linters:
 
   PropertySpelling:
     enabled: true
-    extra_properties: [ "icon-shadow", "outline-radius" ]
+    extra_properties: [
+      "icon-shadow",
+      "outline-radius",
+      "caret-color",
+    ]
 
   PropertyUnits:
     enabled: true
@@ -117,7 +121,7 @@ linters:
 
   SelectorDepth:
     enabled: true
-    max_depth: 5
+    max_depth: 6
 
   SelectorFormat:
     enabled: false
