--- a/packaging/arch/PKGBUILD
+++ b/packaging/arch/PKGBUILD
@@ -20,16 +20,16 @@ md5sums=(
 )
 depends=(
 	'gtk3'
-	'glib2'  # oomox, materia, arc
-	'gdk-pixbuf2'  # oomox, materia, arc
-	'gtk-engine-murrine'  # oomox, materia, arc
-	'gtk-engines'  # oomox, materia, arc
-	'sassc'  # oomox, materia, arc
-	'librsvg'  # oomox, gnome-colors
-	'sed'  # oomox, materia, arc, gnome-colors, archdroid
-	'findutils'  # oomox, materia, arc, gnome-colors, arch-droid
-	'grep'  # oomoxify, oomox, materia, arc, gnome-colors
-	'bc'  # oomoxify, oomox, materia, arc, gnome-colors
+	'glib2'
+	'gdk-pixbuf2'
+	'gtk-engine-murrine'
+	'gtk-engines'
+	'sassc'
+	'librsvg'
+	'sed'
+	'findutils'
+	'grep'
+	'bc'
 )
 makedepends=(
 	'git'
