--- a/.github/workflows/code_style.yml
+++ b/.github/workflows/code_style.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: install scss lint gem
-      run: sudo apt install -y ruby-dev ; gem install scss_lint
+      run: sudo apt install -y ruby-dev ; sudo gem install scss_lint
 
     - name: prepare source files for linting
       run: cp -r ./src/gtk-3.20/ ./gtk320lint && sed -ie 's/%[A-Z0-9_]\+%/123456/g' ./gtk320lint/scss/_global.scss
