--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: switch base docker image
-      run: sed -i -e 's|FROM archlinux/base|FROM actionless/pikaur|' Dockerfile
+      run: sed -i -e 's|FROM archlinux:base-devel|FROM actionless/pikaur|' Dockerfile
 
     - name: build docker image
       run: docker image build ./ -t oomox-gtk-theme
