--- a/packaging/arch/PKGBUILD
+++ b/packaging/arch/PKGBUILD
@@ -20,8 +20,6 @@ depends=(
 	'gtk3'
 	'glib2'
 	'gdk-pixbuf2'
-	'gtk-engine-murrine'
-	'gtk-engines'
 	'sassc'
 	'librsvg'
 	'sed'
@@ -35,6 +33,8 @@ makedepends=(
 )
 optdepends=(
 	'themix-gui: GUI'
+	'gtk-engine-murrine: for using GTK2 theme'
+	'gtk-engines: for using GTK2 theme'
 )
 options=(
 	'!strip'
