chore(github: tests): checkout recursive

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
 
     - uses: actions/checkout@v2
+      with:
+        submodules: recursive
 
     - name: switch base docker image
       run: sed -i -e 's|FROM archlinux:base-devel|FROM actionless/pikaur|' Dockerfile
