--- a/packaging/arch/PKGBUILD
+++ b/packaging/arch/PKGBUILD
@@ -7,8 +7,8 @@ pkgname="${_pkgname}-git"
 pkgver=1.12.7
 pkgrel=1
 pkgdesc="Oomox theme plugin
- (GTK2, GTK3, Cinnamon, Metacity, Openbox, Qt5ct, Qt6ct, Unity, Xfwm) for Themix GUI designer.
- Have a hack for HiDPI in GTK2."
+ (GTK2, GTK3, Cinnamon, Metacity, Openbox, Unity, Xfwm) for Themix GUI designer.
+ Have a hack for HiDPI in GTK2." # Qt5ct and Qt6ct have been moved to Themix Base16 Export Plugin
 arch=('x86_64' 'i686')
 url="https://github.com/themix-project/oomox-gtk-theme"
 license=('GPL3')
