fix(Makefile): remove temp dir in the end, remove redundant chmod command (already performed by `install -m 755`

--- a/Makefile_oomox_plugin
+++ b/Makefile_oomox_plugin
@@ -16,7 +16,6 @@ install:
 		packaging/ \
 			$(PACKAGING_TMP_DIR)/
 	sed -i -e 's|/opt/oomox/|$(APPDIR)/|g' $(PACKAGING_TMP_DIR)/packaging/bin/*
-	chmod a+x "$(PACKAGING_TMP_DIR)/packaging/bin/"*
 	install -d $(DEST_PREFIX)/bin/
 	install -Dp -m 755 "$(PACKAGING_TMP_DIR)/packaging/bin/$(CLI_NAME)" "$(DEST_PREFIX)/bin/"
 
@@ -29,5 +28,7 @@ install:
 		./scripts/ \
 		./src/ \
 			$(DEST_PLUGIN_DIR)/$(PLUGIN_NAME)/
+
+	$(RM) -r "$(PACKAGING_TMP_DIR)"
 
 all: install
